deploy: efabe856a546a3d57ffb402eabf950ab71a07341

--- a/tutorials/cutting.ipynb
+++ b/tutorials/cutting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "995a12c8",
+   "id": "7e70cf45",
    "metadata": {},
    "source": [
     "# Cutting\n"
@@ -10,10 +10,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8cf0c9e",
+   "id": "e27702b9",
    "metadata": {},
    "source": [
-    "## Cutting\n",
+    "## 4. Cutting\n",
     "\n",
     "Any material defines a cutting function, but they differ by dimensionality. To see why, let's inspect"
    ]
@@ -21,13 +21,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d38fd62c",
+   "id": "4f474708",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:23.533609Z",
-     "iopub.status.busy": "2024-04-24T17:27:23.533111Z",
-     "iopub.status.idle": "2024-04-24T17:27:24.734215Z",
-     "shell.execute_reply": "2024-04-24T17:27:24.733592Z"
+     "iopub.execute_input": "2024-04-25T13:23:40.242353Z",
+     "iopub.status.busy": "2024-04-25T13:23:40.242164Z",
+     "iopub.status.idle": "2024-04-25T13:23:41.368680Z",
+     "shell.execute_reply": "2024-04-25T13:23:41.368146Z"
     }
    },
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aada406b",
+   "id": "0f7f057f",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. Let's look at the 1D case"
@@ -73,13 +73,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "683a21ee",
+   "id": "060b496d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:24.736810Z",
-     "iopub.status.busy": "2024-04-24T17:27:24.736351Z",
-     "iopub.status.idle": "2024-04-24T17:27:24.740365Z",
-     "shell.execute_reply": "2024-04-24T17:27:24.739740Z"
+     "iopub.execute_input": "2024-04-25T13:23:41.371377Z",
+     "iopub.status.busy": "2024-04-25T13:23:41.370770Z",
+     "iopub.status.idle": "2024-04-25T13:23:41.374602Z",
+     "shell.execute_reply": "2024-04-25T13:23:41.373987Z"
     }
    },
    "outputs": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b24f92fd",
+   "id": "e8be54d9",
    "metadata": {},
    "source": [
     "So we just need to specify the number of unit cells. "
@@ -126,13 +126,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eedd15fb",
+   "id": "a8f84f31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:24.742676Z",
-     "iopub.status.busy": "2024-04-24T17:27:24.742340Z",
-     "iopub.status.idle": "2024-04-24T17:27:26.511594Z",
-     "shell.execute_reply": "2024-04-24T17:27:26.510937Z"
+     "iopub.execute_input": "2024-04-25T13:23:41.376851Z",
+     "iopub.status.busy": "2024-04-25T13:23:41.376496Z",
+     "iopub.status.idle": "2024-04-25T13:23:42.964910Z",
+     "shell.execute_reply": "2024-04-25T13:23:42.964374Z"
     }
    },
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113e3192",
+   "id": "53ddca78",
    "metadata": {},
    "source": [
     "You may notice this is the configuration with edge states in the band gap"
@@ -162,13 +162,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cb92e6f",
+   "id": "88fe495b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:26.514787Z",
-     "iopub.status.busy": "2024-04-24T17:27:26.514369Z",
-     "iopub.status.idle": "2024-04-24T17:27:28.814539Z",
-     "shell.execute_reply": "2024-04-24T17:27:28.813775Z"
+     "iopub.execute_input": "2024-04-25T13:23:42.967787Z",
+     "iopub.status.busy": "2024-04-25T13:23:42.967375Z",
+     "iopub.status.idle": "2024-04-25T13:23:44.975387Z",
+     "shell.execute_reply": "2024-04-25T13:23:44.974868Z"
     }
    },
    "outputs": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66e0631e",
+   "id": "9f7ed271",
    "metadata": {},
    "source": [
     "If you don't want this, just delete the edges by removing the first and the last orbital in the list"
@@ -198,13 +198,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1ae096fd",
+   "id": "97f7f9b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:28.816895Z",
-     "iopub.status.busy": "2024-04-24T17:27:28.816683Z",
-     "iopub.status.idle": "2024-04-24T17:27:31.004411Z",
-     "shell.execute_reply": "2024-04-24T17:27:31.003729Z"
+     "iopub.execute_input": "2024-04-25T13:23:44.977879Z",
+     "iopub.status.busy": "2024-04-25T13:23:44.977512Z",
+     "iopub.status.idle": "2024-04-25T13:23:46.896422Z",
+     "shell.execute_reply": "2024-04-25T13:23:46.895803Z"
     }
    },
    "outputs": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b23c56",
+   "id": "9ef15a41",
    "metadata": {},
    "source": [
     "That's pretty much all about cutting in 1D. Let's cover 2D."
@@ -247,13 +247,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91520cfd",
+   "id": "1af67969",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:31.007076Z",
-     "iopub.status.busy": "2024-04-24T17:27:31.006693Z",
-     "iopub.status.idle": "2024-04-24T17:27:31.010679Z",
-     "shell.execute_reply": "2024-04-24T17:27:31.010045Z"
+     "iopub.execute_input": "2024-04-25T13:23:46.898858Z",
+     "iopub.status.busy": "2024-04-25T13:23:46.898474Z",
+     "iopub.status.idle": "2024-04-25T13:23:46.902380Z",
+     "shell.execute_reply": "2024-04-25T13:23:46.901656Z"
     }
    },
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fe84345",
+   "id": "1bf0e47c",
    "metadata": {},
    "source": [
     "This is more complex. We can give an arbitrary polygon to the cutting function, so let's do this by approximating a potato (this is an internal joke in Carsten's group)."
@@ -304,13 +304,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f96b7003",
+   "id": "854dd801",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:31.013158Z",
-     "iopub.status.busy": "2024-04-24T17:27:31.012819Z",
-     "iopub.status.idle": "2024-04-24T17:27:31.040249Z",
-     "shell.execute_reply": "2024-04-24T17:27:31.039709Z"
+     "iopub.execute_input": "2024-04-25T13:23:46.904707Z",
+     "iopub.status.busy": "2024-04-25T13:23:46.904349Z",
+     "iopub.status.idle": "2024-04-25T13:23:46.929130Z",
+     "shell.execute_reply": "2024-04-25T13:23:46.928480Z"
     }
    },
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cf9b9d6",
+   "id": "954f470d",
    "metadata": {},
    "source": [
     "Now, we cut a flake"
@@ -340,13 +340,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "90c0f8f6",
+   "id": "1b2b82d2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:31.043046Z",
-     "iopub.status.busy": "2024-04-24T17:27:31.042677Z",
-     "iopub.status.idle": "2024-04-24T17:27:35.495613Z",
-     "shell.execute_reply": "2024-04-24T17:27:35.495037Z"
+     "iopub.execute_input": "2024-04-25T13:23:46.932139Z",
+     "iopub.status.busy": "2024-04-25T13:23:46.931550Z",
+     "iopub.status.idle": "2024-04-25T13:23:50.847898Z",
+     "shell.execute_reply": "2024-04-25T13:23:50.847311Z"
     }
    },
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ff0f50",
+   "id": "aa8c8e2e",
    "metadata": {},
    "source": [
     "\n",
@@ -380,13 +380,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "11d09050",
+   "id": "33e1b0b6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:35.498597Z",
-     "iopub.status.busy": "2024-04-24T17:27:35.498046Z",
-     "iopub.status.idle": "2024-04-24T17:27:35.502328Z",
-     "shell.execute_reply": "2024-04-24T17:27:35.501555Z"
+     "iopub.execute_input": "2024-04-25T13:23:50.850868Z",
+     "iopub.status.busy": "2024-04-25T13:23:50.850396Z",
+     "iopub.status.idle": "2024-04-25T13:23:50.854439Z",
+     "shell.execute_reply": "2024-04-25T13:23:50.853936Z"
     }
    },
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df89d906",
+   "id": "49ce4061",
    "metadata": {},
    "source": [
     "## Bearded configurations"
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c68691f9",
+   "id": "369aff77",
    "metadata": {},
    "source": [
     "Cutting removes \"dangling\" atoms by default. Dangling atoms are defined by their neighbor number: if they have only one neighbor, they are removed. If you want to deactivate this to keep \"bearded\" configurations, do"
@@ -441,13 +441,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b0ce2c79",
+   "id": "f7a4db3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:35.505208Z",
-     "iopub.status.busy": "2024-04-24T17:27:35.504680Z",
-     "iopub.status.idle": "2024-04-24T17:27:37.238928Z",
-     "shell.execute_reply": "2024-04-24T17:27:37.238363Z"
+     "iopub.execute_input": "2024-04-25T13:23:50.856917Z",
+     "iopub.status.busy": "2024-04-25T13:23:50.856592Z",
+     "iopub.status.idle": "2024-04-25T13:23:52.426351Z",
+     "shell.execute_reply": "2024-04-25T13:23:52.425675Z"
     }
    },
    "outputs": [
