--- a/tutorials/electric_fields.ipynb
+++ b/tutorials/electric_fields.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4b929f0b",
+   "id": "e4f0e5fd",
    "metadata": {},
    "source": [
-    "# Electric Fields\n",
+    "# 5. Electric Fields\n",
     "\n",
     "We present how to handle electric fields"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "94407cc2",
+   "id": "28897722",
    "metadata": {},
    "source": [
     "\n",
@@ -22,13 +22,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4fa173ce",
+   "id": "9e64a93e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:13.706095Z",
-     "iopub.status.busy": "2024-04-24T17:28:13.705867Z",
-     "iopub.status.idle": "2024-04-24T17:28:14.915972Z",
-     "shell.execute_reply": "2024-04-24T17:28:14.915364Z"
+     "iopub.execute_input": "2024-04-25T13:24:12.476955Z",
+     "iopub.status.busy": "2024-04-25T13:24:12.476773Z",
+     "iopub.status.idle": "2024-04-25T13:24:13.595298Z",
+     "shell.execute_reply": "2024-04-25T13:24:13.594663Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fae2054",
+   "id": "9af54e52",
    "metadata": {},
    "source": [
     "So, calling \"Wave\" gives back a function we can evaluate at single points in time"
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "19f8a707",
+   "id": "4c3358b5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:14.918603Z",
-     "iopub.status.busy": "2024-04-24T17:28:14.918108Z",
-     "iopub.status.idle": "2024-04-24T17:28:14.956846Z",
-     "shell.execute_reply": "2024-04-24T17:28:14.956308Z"
+     "iopub.execute_input": "2024-04-25T13:24:13.597978Z",
+     "iopub.status.busy": "2024-04-25T13:24:13.597548Z",
+     "iopub.status.idle": "2024-04-25T13:24:13.630294Z",
+     "shell.execute_reply": "2024-04-25T13:24:13.629779Z"
     }
    },
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c41a2f56",
+   "id": "7a68b674",
    "metadata": {},
    "source": [
     "A quick way to visualize them is to plot their real and imaginary part. JAX offers the vmap function that vectorizes the application."
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2907148b",
+   "id": "c53e7327",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:14.959356Z",
-     "iopub.status.busy": "2024-04-24T17:28:14.958976Z",
-     "iopub.status.idle": "2024-04-24T17:28:15.037880Z",
-     "shell.execute_reply": "2024-04-24T17:28:15.037279Z"
+     "iopub.execute_input": "2024-04-25T13:24:13.632903Z",
+     "iopub.status.busy": "2024-04-25T13:24:13.632543Z",
+     "iopub.status.idle": "2024-04-25T13:24:13.701680Z",
+     "shell.execute_reply": "2024-04-25T13:24:13.701166Z"
     }
    },
    "outputs": [
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "48f456aa",
+   "id": "651e6841",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:15.040418Z",
-     "iopub.status.busy": "2024-04-24T17:28:15.040041Z",
-     "iopub.status.idle": "2024-04-24T17:28:15.715529Z",
-     "shell.execute_reply": "2024-04-24T17:28:15.714915Z"
+     "iopub.execute_input": "2024-04-25T13:24:13.703923Z",
+     "iopub.status.busy": "2024-04-25T13:24:13.703628Z",
+     "iopub.status.idle": "2024-04-25T13:24:14.339087Z",
+     "shell.execute_reply": "2024-04-25T13:24:14.338476Z"
     }
    },
    "outputs": [
