--- a/tutorials/linear_response.ipynb
+++ b/tutorials/linear_response.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c943983a",
+   "id": "ff5fc327",
    "metadata": {},
    "source": [
-    "# Linear response\n"
+    "# 8. Linear response\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "54f7c329",
+   "id": "f3c33842",
    "metadata": {},
    "source": [
     "We will calculate the optical absorption in the RPA and compare it to TD simulations with a weak external field."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39fc7b48",
+   "id": "c8ba18dd",
    "metadata": {},
    "source": [
     "## RPA"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6235b878",
+   "id": "c0b26740",
    "metadata": {},
    "source": [
     "First, we set up the RPA simulation. We will consider a small triangle such that the required simulation time stays in the seconds range."
@@ -35,13 +35,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26fc2b91",
+   "id": "608c7e5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:54.946160Z",
-     "iopub.status.busy": "2024-04-24T17:27:54.945956Z",
-     "iopub.status.idle": "2024-04-24T17:28:00.091877Z",
-     "shell.execute_reply": "2024-04-24T17:28:00.091134Z"
+     "iopub.execute_input": "2024-04-25T13:23:55.796148Z",
+     "iopub.status.busy": "2024-04-25T13:23:55.795961Z",
+     "iopub.status.idle": "2024-04-25T13:24:00.203534Z",
+     "shell.execute_reply": "2024-04-25T13:24:00.202784Z"
     },
     "lines_to_next_cell": 2
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c95a268",
+   "id": "616b64ed",
    "metadata": {},
    "source": [
     "We obtain the polarizability for an external $x$ polarized field and from its imaginary part the absorption."
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "909f6202",
+   "id": "5919cf79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:00.095104Z",
-     "iopub.status.busy": "2024-04-24T17:28:00.094499Z",
-     "iopub.status.idle": "2024-04-24T17:28:07.107428Z",
-     "shell.execute_reply": "2024-04-24T17:28:07.106725Z"
+     "iopub.execute_input": "2024-04-25T13:24:00.206469Z",
+     "iopub.status.busy": "2024-04-25T13:24:00.206054Z",
+     "iopub.status.idle": "2024-04-25T13:24:06.537392Z",
+     "shell.execute_reply": "2024-04-25T13:24:06.536719Z"
     }
    },
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04641fe",
+   "id": "3f9f8271",
    "metadata": {},
    "source": [
     "## TD"
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9a93228",
+   "id": "49c3b474",
    "metadata": {},
    "source": [
     "For the TD simulations, we specify a spectrally broad external illumination (i.e. a narrow pulse in time domain) to capture the system's response over a large frequency range."
@@ -109,13 +109,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f9adc3b4",
+   "id": "6b48ff41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:07.112291Z",
-     "iopub.status.busy": "2024-04-24T17:28:07.111182Z",
-     "iopub.status.idle": "2024-04-24T17:28:07.161600Z",
-     "shell.execute_reply": "2024-04-24T17:28:07.161062Z"
+     "iopub.execute_input": "2024-04-25T13:24:06.541813Z",
+     "iopub.status.busy": "2024-04-25T13:24:06.540577Z",
+     "iopub.status.idle": "2024-04-25T13:24:06.585725Z",
+     "shell.execute_reply": "2024-04-25T13:24:06.585228Z"
     }
    },
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2948b84b",
+   "id": "8b38e178",
    "metadata": {},
    "source": [
     "We then compute the TD dipole moment and Fourier transform it."
@@ -137,13 +137,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "58c796f6",
+   "id": "fd85169a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:07.164450Z",
-     "iopub.status.busy": "2024-04-24T17:28:07.164045Z",
-     "iopub.status.idle": "2024-04-24T17:28:09.348100Z",
-     "shell.execute_reply": "2024-04-24T17:28:09.347550Z"
+     "iopub.execute_input": "2024-04-25T13:24:06.588570Z",
+     "iopub.status.busy": "2024-04-25T13:24:06.588252Z",
+     "iopub.status.idle": "2024-04-25T13:24:08.542345Z",
+     "shell.execute_reply": "2024-04-25T13:24:08.541641Z"
     }
    },
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d2f582",
+   "id": "1383f19b",
    "metadata": {},
    "source": [
     "The polarizability is given by $p / E$ (we only take the $x$ - component)."
@@ -171,13 +171,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "79d3f5a6",
+   "id": "3d423e15",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:09.351057Z",
-     "iopub.status.busy": "2024-04-24T17:28:09.350670Z",
-     "iopub.status.idle": "2024-04-24T17:28:09.455461Z",
-     "shell.execute_reply": "2024-04-24T17:28:09.454890Z"
+     "iopub.execute_input": "2024-04-25T13:24:08.545398Z",
+     "iopub.status.busy": "2024-04-25T13:24:08.544928Z",
+     "iopub.status.idle": "2024-04-25T13:24:08.631441Z",
+     "shell.execute_reply": "2024-04-25T13:24:08.630895Z"
     }
    },
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4e605e9",
+   "id": "9399ff4c",
    "metadata": {},
    "source": [
     "We can now compare the two results."
@@ -196,13 +196,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fccf9ffb",
+   "id": "dcbc20bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:28:09.458480Z",
-     "iopub.status.busy": "2024-04-24T17:28:09.458075Z",
-     "iopub.status.idle": "2024-04-24T17:28:09.976242Z",
-     "shell.execute_reply": "2024-04-24T17:28:09.975560Z"
+     "iopub.execute_input": "2024-04-25T13:24:08.634073Z",
+     "iopub.status.busy": "2024-04-25T13:24:08.633620Z",
+     "iopub.status.idle": "2024-04-25T13:24:09.103348Z",
+     "shell.execute_reply": "2024-04-25T13:24:09.102621Z"
     },
     "lines_to_next_cell": 0
    },
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5807ebbd",
+   "id": "2d9f9809",
    "metadata": {},
    "outputs": [],
    "source": []
