--- a/tutorials/time-domain_simulations.ipynb
+++ b/tutorials/time-domain_simulations.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fcdaa2e",
+   "id": "6d5b9a82",
    "metadata": {},
    "source": [
-    "# Time-Domain simulations\n"
+    "# 6. Time-Domain simulations\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96db185d",
+   "id": "101f7589",
    "metadata": {},
    "source": [
     "## Performance Tips"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0585be86",
+   "id": "a6110ab2",
    "metadata": {},
    "source": [
     "First, we do the necessary setup: imports, shape, flake and field definition "
@@ -27,13 +27,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "63397656",
+   "id": "14417e67",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:00.562099Z",
-     "iopub.status.busy": "2024-04-24T17:27:00.561901Z",
-     "iopub.status.idle": "2024-04-24T17:27:06.167117Z",
-     "shell.execute_reply": "2024-04-24T17:27:06.166540Z"
+     "iopub.execute_input": "2024-04-25T13:23:19.598136Z",
+     "iopub.status.busy": "2024-04-25T13:23:19.597670Z",
+     "iopub.status.idle": "2024-04-25T13:23:24.454718Z",
+     "shell.execute_reply": "2024-04-25T13:23:24.454203Z"
     }
    },
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a899725e",
+   "id": "ec3490ff",
    "metadata": {},
    "source": [
     "The dynamics of any observable depend on the density matrix. The function get_expectation_value_frequency_domain essentially"
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fad6bca7",
+   "id": "720dddb2",
    "metadata": {},
    "source": [
     "1. samples density matrices in time\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224948d7",
+   "id": "89c020f2",
    "metadata": {},
    "source": [
     "This is fine if we want to simulate a single observable, but means that we have to rerun the simulation for every observable. To save time, we can do the TD simulation by hand, save the density matrices and then compute expectation values without needing to recompute."
@@ -90,13 +90,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "744c1c88",
+   "id": "a02219fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:06.170040Z",
-     "iopub.status.busy": "2024-04-24T17:27:06.169693Z",
-     "iopub.status.idle": "2024-04-24T17:27:09.829475Z",
-     "shell.execute_reply": "2024-04-24T17:27:09.828819Z"
+     "iopub.execute_input": "2024-04-25T13:23:24.457848Z",
+     "iopub.status.busy": "2024-04-25T13:23:24.457337Z",
+     "iopub.status.idle": "2024-04-25T13:23:27.627583Z",
+     "shell.execute_reply": "2024-04-25T13:23:27.626906Z"
     }
    },
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b235ecb7",
+   "id": "c0e7f36c",
    "metadata": {},
    "source": [
     "Now, we have density matrices in time domain. The first axis is time, the last two axis correspond to the dimension of the one particle Hilbert space. Let's compute expectation values for the dipole operator by hand"
@@ -130,13 +130,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "14777af7",
+   "id": "e4a84449",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:09.832198Z",
-     "iopub.status.busy": "2024-04-24T17:27:09.831805Z",
-     "iopub.status.idle": "2024-04-24T17:27:09.933958Z",
-     "shell.execute_reply": "2024-04-24T17:27:09.933375Z"
+     "iopub.execute_input": "2024-04-25T13:23:27.630324Z",
+     "iopub.status.busy": "2024-04-25T13:23:27.629802Z",
+     "iopub.status.idle": "2024-04-25T13:23:27.724566Z",
+     "shell.execute_reply": "2024-04-25T13:23:27.724060Z"
     }
    },
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c638496a",
+   "id": "65da662f",
    "metadata": {},
    "source": [
     "You might have noticed that neither the density_matrices nor the dipole_operator are square matrices. The function can still handle that. Let's inspect the shape of the dipole moments"
@@ -155,13 +155,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a2fb72a",
+   "id": "d4499091",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:09.936879Z",
-     "iopub.status.busy": "2024-04-24T17:27:09.936385Z",
-     "iopub.status.idle": "2024-04-24T17:27:09.940168Z",
-     "shell.execute_reply": "2024-04-24T17:27:09.939446Z"
+     "iopub.execute_input": "2024-04-25T13:23:27.727378Z",
+     "iopub.status.busy": "2024-04-25T13:23:27.726870Z",
+     "iopub.status.idle": "2024-04-25T13:23:27.730430Z",
+     "shell.execute_reply": "2024-04-25T13:23:27.729904Z"
     }
    },
    "outputs": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72958027",
+   "id": "2870e8c2",
    "metadata": {},
    "source": [
     "So, the first axis is time, the last axis corresponds to x,y,z  Cartesian coordinates."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "873b8d32",
+   "id": "a89d7cd6",
    "metadata": {},
    "source": [
     "Let's do the same computation in Fourier space: we can avoid recomputation by passing the TD density matrix as an explicit argument"
@@ -196,13 +196,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ea553149",
+   "id": "118e93d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:09.942671Z",
-     "iopub.status.busy": "2024-04-24T17:27:09.942335Z",
-     "iopub.status.idle": "2024-04-24T17:27:10.353982Z",
-     "shell.execute_reply": "2024-04-24T17:27:10.353364Z"
+     "iopub.execute_input": "2024-04-25T13:23:27.732834Z",
+     "iopub.status.busy": "2024-04-25T13:23:27.732490Z",
+     "iopub.status.idle": "2024-04-25T13:23:28.074957Z",
+     "shell.execute_reply": "2024-04-25T13:23:28.074372Z"
     }
    },
    "outputs": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32442919",
+   "id": "07293dba",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a978c0c",
+   "id": "057abd52",
    "metadata": {},
    "source": [
     "## Options"
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a9cd3f",
+   "id": "6b8145c9",
    "metadata": {},
    "source": [
     "The time evolution relies on [diffrax](https://docs.kidger.site/diffrax). You can pass [solvers](https://docs.kidger.site/diffrax/usage/how-to-choose-a-solver/) directly to any function calling the time domain evolution. By default, we use 5-th order Runge Kutta with adaptive step size, where the relative and absolute tolerance are set to 1e-10."
@@ -254,13 +254,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2891d172",
+   "id": "19bab1dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:10.356606Z",
-     "iopub.status.busy": "2024-04-24T17:27:10.356218Z",
-     "iopub.status.idle": "2024-04-24T17:27:11.003400Z",
-     "shell.execute_reply": "2024-04-24T17:27:11.002703Z"
+     "iopub.execute_input": "2024-04-25T13:23:28.077710Z",
+     "iopub.status.busy": "2024-04-25T13:23:28.077333Z",
+     "iopub.status.idle": "2024-04-25T13:23:28.683715Z",
+     "shell.execute_reply": "2024-04-25T13:23:28.683019Z"
     }
    },
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fc4e3fd",
+   "id": "85d5407c",
    "metadata": {},
    "source": [
     "We see that we have pretty good agreement."
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93515ce",
+   "id": "e31562d0",
    "metadata": {},
    "source": [
     "## Convergence"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ba8a2d",
+   "id": "0d9ab8ef",
    "metadata": {},
    "source": [
     "To check convergence, we can"
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e0801c",
+   "id": "ab9c370a",
    "metadata": {},
    "source": [
     "1. Decrease the initial step size by passing a higher value for steps_time\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3190218c",
+   "id": "e3ef752a",
    "metadata": {},
    "source": [
     "We will look at the third example. The continuity equation relates the dipole moment and the (longitudinal) current"
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f1fd2f2",
+   "id": "16ae685d",
    "metadata": {},
    "source": [
     "$$\\nabla j = \\partial_t \\rho = \\partial_t \\nabla P \\implies j = \\partial_t P$$"
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1cfb3b5",
+   "id": "4ac34690",
    "metadata": {},
    "source": [
     "In Fourier space, we can write equivalently"
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f687ef",
+   "id": "e1dd31cb",
    "metadata": {},
    "source": [
     "$$-i \\omega p(\\omega) = j(\\omega)$$"
@@ -357,22 +357,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96047c57",
+   "id": "bde9cb2c",
    "metadata": {},
    "source": [
-    "The current operator is, a bit confusingly, called velocity operator in GRANAD, since atomic units are used, where q = 1 and $$j = q v$$. "
+    "The current operator is, a bit confusingly, called velocity operator in GRANAD, since atomic units are used, where q = 1 and $j = q v$. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8dbf3c87",
+   "id": "9aa86270",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:11.006452Z",
-     "iopub.status.busy": "2024-04-24T17:27:11.006026Z",
-     "iopub.status.idle": "2024-04-24T17:27:11.356945Z",
-     "shell.execute_reply": "2024-04-24T17:27:11.356228Z"
+     "iopub.execute_input": "2024-04-25T13:23:28.686438Z",
+     "iopub.status.busy": "2024-04-25T13:23:28.686053Z",
+     "iopub.status.idle": "2024-04-25T13:23:29.025969Z",
+     "shell.execute_reply": "2024-04-25T13:23:29.025351Z"
     }
    },
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8059705e",
+   "id": "3513ae7f",
    "metadata": {},
    "source": [
     "We see that the continuity equation holds."
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34dca5c0",
+   "id": "ec2c4b1d",
    "metadata": {},
    "source": [
     "## Resuming simulations"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf84568",
+   "id": "ab7fddaa",
    "metadata": {},
    "source": [
     "TD simulations can be resumed. This is useful, e.g. when computing the EPI, where the system needs to have reached a steady state. Let's compute the EPI for our tiny triangle. First, we propagate the system in time and check the oscillation of the dipole moment"
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "02e3e582",
+   "id": "f1cc883e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:11.359939Z",
-     "iopub.status.busy": "2024-04-24T17:27:11.359219Z",
-     "iopub.status.idle": "2024-04-24T17:27:13.252480Z",
-     "shell.execute_reply": "2024-04-24T17:27:13.251809Z"
+     "iopub.execute_input": "2024-04-25T13:23:29.028348Z",
+     "iopub.status.busy": "2024-04-25T13:23:29.028149Z",
+     "iopub.status.idle": "2024-04-25T13:23:30.789222Z",
+     "shell.execute_reply": "2024-04-25T13:23:30.788656Z"
     }
    },
    "outputs": [
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2168d50",
+   "id": "6e98154c",
    "metadata": {},
    "source": [
     "The dipole moment doesn't look periodic, so the system is likely not in a steady state. We can push the system further in time by supplying"
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f8927dc",
+   "id": "9129cc8c",
    "metadata": {},
    "source": [
     "1. the time we ended the simulation as start time\n",
@@ -488,13 +488,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c42efb66",
+   "id": "815412bb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:13.255238Z",
-     "iopub.status.busy": "2024-04-24T17:27:13.254720Z",
-     "iopub.status.idle": "2024-04-24T17:27:14.643517Z",
-     "shell.execute_reply": "2024-04-24T17:27:14.642817Z"
+     "iopub.execute_input": "2024-04-25T13:23:30.792233Z",
+     "iopub.status.busy": "2024-04-25T13:23:30.791812Z",
+     "iopub.status.idle": "2024-04-25T13:23:32.071957Z",
+     "shell.execute_reply": "2024-04-25T13:23:32.071377Z"
     }
    },
    "outputs": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c1234f",
+   "id": "cfceaae2",
    "metadata": {},
    "source": [
     "We can repeat this process until we have visual confirmation of the steady state:"
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26818c44",
+   "id": "707ae6f6",
    "metadata": {},
    "source": [
     "1. continue simulation with end_time increased and the initial density matrix set to the last density matrix\n",
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cde4d543",
+   "id": "0487fd9c",
    "metadata": {},
    "source": [
     "GRANAD offers a way you can try to automate this process: the function \"fraction_periodic\" tries to compute the fraction of a signal that is periodic. Let's look at it"
@@ -552,13 +552,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "645ed6de",
+   "id": "a2026244",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:14.645997Z",
-     "iopub.status.busy": "2024-04-24T17:27:14.645769Z",
-     "iopub.status.idle": "2024-04-24T17:27:14.649439Z",
-     "shell.execute_reply": "2024-04-24T17:27:14.648715Z"
+     "iopub.execute_input": "2024-04-25T13:23:32.074482Z",
+     "iopub.status.busy": "2024-04-25T13:23:32.074126Z",
+     "iopub.status.idle": "2024-04-25T13:23:32.078319Z",
+     "shell.execute_reply": "2024-04-25T13:23:32.077640Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccf7e76b",
+   "id": "2db8c201",
    "metadata": {},
    "source": [
     "In our case, the signal to check for periodicity is the dipole moment: once it is periodic, we have hit a steady state. We can define a custom function to test this"
@@ -605,13 +605,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "96b7c132",
+   "id": "d99166f5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:14.651996Z",
-     "iopub.status.busy": "2024-04-24T17:27:14.651537Z",
-     "iopub.status.idle": "2024-04-24T17:27:14.655276Z",
-     "shell.execute_reply": "2024-04-24T17:27:14.654603Z"
+     "iopub.execute_input": "2024-04-25T13:23:32.080860Z",
+     "iopub.status.busy": "2024-04-25T13:23:32.080400Z",
+     "iopub.status.idle": "2024-04-25T13:23:32.084264Z",
+     "shell.execute_reply": "2024-04-25T13:23:32.083608Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8ea8007",
+   "id": "139455ea",
    "metadata": {},
    "source": [
     "We chose the value of 0.8 somewhat arbitrarily, but the exact value probably doesn't matter that much in practice if it's high enough (> 0.5). Our automated loop looks like this"
@@ -636,13 +636,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "516b473a",
+   "id": "5477035e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:14.657690Z",
-     "iopub.status.busy": "2024-04-24T17:27:14.657356Z",
-     "iopub.status.idle": "2024-04-24T17:27:19.152318Z",
-     "shell.execute_reply": "2024-04-24T17:27:19.151655Z"
+     "iopub.execute_input": "2024-04-25T13:23:32.086558Z",
+     "iopub.status.busy": "2024-04-25T13:23:32.086226Z",
+     "iopub.status.idle": "2024-04-25T13:23:36.301700Z",
+     "shell.execute_reply": "2024-04-25T13:23:36.301094Z"
     }
    },
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b29568d",
+   "id": "9cc5e011",
    "metadata": {},
    "source": [
     "Now, we plot"
@@ -686,13 +686,13 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c941926c",
+   "id": "ee74ad72",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:19.155214Z",
-     "iopub.status.busy": "2024-04-24T17:27:19.154732Z",
-     "iopub.status.idle": "2024-04-24T17:27:19.413630Z",
-     "shell.execute_reply": "2024-04-24T17:27:19.412994Z"
+     "iopub.execute_input": "2024-04-25T13:23:36.304285Z",
+     "iopub.status.busy": "2024-04-25T13:23:36.303905Z",
+     "iopub.status.idle": "2024-04-25T13:23:36.513242Z",
+     "shell.execute_reply": "2024-04-25T13:23:36.512531Z"
     }
    },
    "outputs": [
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ff9580b",
+   "id": "31b6976e",
    "metadata": {},
    "source": [
     "We have correctly identified periodicity and thus the density matrix density_matrices[-1] can be taken as a steady state for epi calculation"
@@ -724,13 +724,13 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bb8630a2",
+   "id": "40a0df30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:27:19.416069Z",
-     "iopub.status.busy": "2024-04-24T17:27:19.415875Z",
-     "iopub.status.idle": "2024-04-24T17:27:19.692005Z",
-     "shell.execute_reply": "2024-04-24T17:27:19.691390Z"
+     "iopub.execute_input": "2024-04-25T13:23:36.515767Z",
+     "iopub.status.busy": "2024-04-25T13:23:36.515568Z",
+     "iopub.status.idle": "2024-04-25T13:23:36.755428Z",
+     "shell.execute_reply": "2024-04-25T13:23:36.754804Z"
     }
    },
    "outputs": [
