--- a/tutorials/defining_materials.ipynb
+++ b/tutorials/defining_materials.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7af0b266",
+   "id": "9e978d03",
    "metadata": {},
    "source": [
-    "# Defining Materials\n",
+    "# 9. Defining Materials\n",
     "\n",
     "We talk about how to modify built-in materials and define custom ones."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd9a3923",
+   "id": "4f005a9f",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8f52c595",
+   "id": "ea6f62fa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:15.012436Z",
-     "iopub.status.busy": "2024-04-24T17:26:15.012233Z",
-     "iopub.status.idle": "2024-04-24T17:26:16.231527Z",
-     "shell.execute_reply": "2024-04-24T17:26:16.230880Z"
+     "iopub.execute_input": "2024-04-25T13:22:38.320435Z",
+     "iopub.status.busy": "2024-04-25T13:22:38.319956Z",
+     "iopub.status.idle": "2024-04-25T13:22:39.452849Z",
+     "shell.execute_reply": "2024-04-25T13:22:39.452210Z"
     }
    },
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2618dea4",
+   "id": "c16f4e57",
    "metadata": {},
    "source": [
     "So, the Material class essentially defines a small language we can use to specify a material. The Hubbard model would look like this"
@@ -105,13 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b4e36be0",
+   "id": "5608d6c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:16.234540Z",
-     "iopub.status.busy": "2024-04-24T17:26:16.233992Z",
-     "iopub.status.idle": "2024-04-24T17:26:16.249452Z",
-     "shell.execute_reply": "2024-04-24T17:26:16.248807Z"
+     "iopub.execute_input": "2024-04-25T13:22:39.455494Z",
+     "iopub.status.busy": "2024-04-25T13:22:39.455008Z",
+     "iopub.status.idle": "2024-04-25T13:22:39.468350Z",
+     "shell.execute_reply": "2024-04-25T13:22:39.467744Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b873764b",
+   "id": "80742924",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f3a0f201",
+   "id": "69b6d213",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:16.252334Z",
-     "iopub.status.busy": "2024-04-24T17:26:16.251864Z",
-     "iopub.status.idle": "2024-04-24T17:26:16.256207Z",
-     "shell.execute_reply": "2024-04-24T17:26:16.255538Z"
+     "iopub.execute_input": "2024-04-25T13:22:39.470704Z",
+     "iopub.status.busy": "2024-04-25T13:22:39.470374Z",
+     "iopub.status.idle": "2024-04-25T13:22:39.474284Z",
+     "shell.execute_reply": "2024-04-25T13:22:39.473669Z"
     }
    },
    "outputs": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd7bf86",
+   "id": "173294f9",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -209,13 +209,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "77970546",
+   "id": "85c2bdaf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:16.258710Z",
-     "iopub.status.busy": "2024-04-24T17:26:16.258342Z",
-     "iopub.status.idle": "2024-04-24T17:26:16.262181Z",
-     "shell.execute_reply": "2024-04-24T17:26:16.261429Z"
+     "iopub.execute_input": "2024-04-25T13:22:39.476485Z",
+     "iopub.status.busy": "2024-04-25T13:22:39.476163Z",
+     "iopub.status.idle": "2024-04-25T13:22:39.479644Z",
+     "shell.execute_reply": "2024-04-25T13:22:39.478893Z"
     }
    },
    "outputs": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d666232",
+   "id": "a3d0c0e7",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -265,13 +265,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ba4dc5a",
+   "id": "71af8b1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:16.264664Z",
-     "iopub.status.busy": "2024-04-24T17:26:16.264323Z",
-     "iopub.status.idle": "2024-04-24T17:26:18.048362Z",
-     "shell.execute_reply": "2024-04-24T17:26:18.047748Z"
+     "iopub.execute_input": "2024-04-25T13:22:39.481892Z",
+     "iopub.status.busy": "2024-04-25T13:22:39.481530Z",
+     "iopub.status.idle": "2024-04-25T13:22:41.070465Z",
+     "shell.execute_reply": "2024-04-25T13:22:41.069818Z"
     }
    },
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac7e5d7",
+   "id": "0d3a1bd2",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb6e3b4",
+   "id": "09d8553a",
    "metadata": {},
    "source": [
     "You can just copy the material you want to modify and change/override its attributes. As an example, we will turn our ordinary graphene model into a variant of the Haldane model by introducing complex nnn hoppings"
@@ -317,13 +317,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "86e6a8c8",
+   "id": "23546d8b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:18.051898Z",
-     "iopub.status.busy": "2024-04-24T17:26:18.051593Z",
-     "iopub.status.idle": "2024-04-24T17:26:18.073960Z",
-     "shell.execute_reply": "2024-04-24T17:26:18.073245Z"
+     "iopub.execute_input": "2024-04-25T13:22:41.073487Z",
+     "iopub.status.busy": "2024-04-25T13:22:41.073252Z",
+     "iopub.status.idle": "2024-04-25T13:22:41.091687Z",
+     "shell.execute_reply": "2024-04-25T13:22:41.090991Z"
     }
    },
    "outputs": [
@@ -341,8 +341,8 @@
       "    Position: (0, 0), Tag: sublattice_1, Species: pz\n",
       "    Position: (-0.3333333333333333, -0.6666666666666666), Tag: sublattice_2, Species: pz\n",
       "  Interactions:\n",
-      "    Type: hopping, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([0, 1.0, 0.1j], <function Material.add_interaction.<locals>.<lambda> at 0x7f7781c9d620>)\n",
-      "    Type: coulomb, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([16.522, 8.64, 5.333], <function Material.add_interaction.<locals>.<lambda> at 0x7f778a892700>)\n",
+      "    Type: hopping, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([0, 1.0, 0.1j], <function Material.add_interaction.<locals>.<lambda> at 0x7f4b803772e0>)\n",
+      "    Type: coulomb, Participants: ('pz', 'pz'), Couplings (neighbor, function): ([16.522, 8.64, 5.333], <function Material.add_interaction.<locals>.<lambda> at 0x7f4b80f6a700>)\n",
       "\n"
      ]
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7788f99",
+   "id": "2defc44b",
    "metadata": {},
    "source": [
     "The Haldane model breaks inversion symmetry explicity by a staggered onsite potential. There is no (nice) way to achieve this with a few modifications from the normal graphene model, so we simply use the versatile properties of the orbital list datatype when we cut finite flakes"
@@ -366,13 +366,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d8ee94fb",
+   "id": "88a48abd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:18.077550Z",
-     "iopub.status.busy": "2024-04-24T17:26:18.077257Z",
-     "iopub.status.idle": "2024-04-24T17:26:22.676595Z",
-     "shell.execute_reply": "2024-04-24T17:26:22.675885Z"
+     "iopub.execute_input": "2024-04-25T13:22:41.094659Z",
+     "iopub.status.busy": "2024-04-25T13:22:41.094155Z",
+     "iopub.status.idle": "2024-04-25T13:22:45.313971Z",
+     "shell.execute_reply": "2024-04-25T13:22:45.313424Z"
     }
    },
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68620c6e",
+   "id": "9b12fdd7",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -406,13 +406,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e6679b6e",
+   "id": "f8d43c8a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-24T17:26:22.679944Z",
-     "iopub.status.busy": "2024-04-24T17:26:22.679423Z",
-     "iopub.status.idle": "2024-04-24T17:26:26.346786Z",
-     "shell.execute_reply": "2024-04-24T17:26:26.346130Z"
+     "iopub.execute_input": "2024-04-25T13:22:45.316749Z",
+     "iopub.status.busy": "2024-04-25T13:22:45.316367Z",
+     "iopub.status.idle": "2024-04-25T13:22:48.737765Z",
+     "shell.execute_reply": "2024-04-25T13:22:48.737129Z"
     },
     "lines_to_next_cell": 0
    },
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcdfe977",
+   "id": "83784f12",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7de20e",
+   "id": "9aa0dc05",
    "metadata": {},
    "outputs": [],
    "source": []
